force-app/main/default/objects/Eloqua_Form__c/Eloqua_Form__c.object-meta.xml
<CustomObject>
    <label>Eloqua Form</label>
    <nameField>
        <label>Eloqua Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eloqua Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>