force-app/main/default/objects/Eloqua_Form__c/fields/Business_Function__c.field-meta.xml
<CustomField>
    <fullName>Business_Function__c</fullName>
    <label>Business Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>