force-app/main/default/objects/Eloqua_Form__c/fields/Eloqua_Form_Sub_Name__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Form_Sub_Name__c</fullName>
    <label>Eloqua Form Sub Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>