force-app/main/default/objects/Eloqua_Form__c/fields/Form_Submit_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Submit_URL__c</fullName>
    <label>Form Submit URL</label>
    <type>Url</type>
</CustomField>