force-app/main/default/objects/Eloqua_Form__c/fields/SFDC_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Eloqua_Forms</relationshipLabel>
    <relationshipName>Eloqua_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>