force-app/main/default/objects/Eloqua_Form__c/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>